z-index resolved

--- a/css/style.css
+++ b/css/style.css
@@ -857,7 +857,7 @@ body {
   top: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.8);
-  z-index: 200;
+  z-index: 500;
   opacity: 0;
   visibility: hidden;
   -webkit-transition: all .2s;
@@ -1301,7 +1301,7 @@ body {
   color: #fff;
   text-transform: uppercase;
   background-image: linear-gradient(120deg, transparent 0%, transparent 50%, #fff 50%);
-  background-size: 230%;
+  background-size: 250%;
   -webkit-transition: all .4s;
   transition: all .4s;
 }
