--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -5,7 +5,7 @@
     top: 0;
     left: 0;
     background-color: rgba(0, 0, 0, .8);
-    z-index: 200;
+    z-index: 500;
     opacity: 0;
     visibility: hidden;
     transition: all .2s;
