--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -85,7 +85,7 @@
             color: #fff;
             text-transform: uppercase;
             background-image: linear-gradient(120deg, transparent 0%, transparent 50%, #fff 50%);
-            background-size: 230%;
+            background-size: 250%;
             transition: all .4s;
        }
 
